--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>webassignment</title>
+    <style>
+      html,
+      body {
+        height: 100%;
+      }
+    
+      body {
+        background: #f2f2f2;
+        display: flex;
+    
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
     <noscript>
